--- a/web/themes/crane/scss/components/_main.scss
+++ b/web/themes/crane/scss/components/_main.scss
@@ -1,3 +1,15 @@
 /* ========================
   MAIN
 ========================== */
+
+/* LAYOUTS
+---------------- */
+@media screen and (min-width: 38em){
+	.layout-column--half{
+		padding-right: 20px;
+		& + .layout-column--half{
+			padding-right: 0;
+			padding-left: 20px;
+		}
+	}
+}
