--- a/web/themes/crane/scss/entities/_misc-forms.scss
+++ b/web/themes/crane/scss/entities/_misc-forms.scss
@@ -41,3 +41,18 @@
 		}//end tbody
 	}//end table
 }//end block layout admin form
+
+/* WEBFORM UI
+------------- */
+.webform-filter-form{
+	.seven-details__wrapper{
+		input[type="submit"]{
+			margin-bottom: 0;
+		}
+	}
+}//end webform-filter-form
+
+
+
+
+
