--- a/web/themes/crane/scss/components/_list.scss
+++ b/web/themes/crane/scss/components/_list.scss
@@ -36,10 +36,16 @@
 			border-top: 0;
 		}
 		a{
-			padding: 14px 15px 0 25px;
-		}
-		.description{
-			margin-bottom: 15px;
+			padding: 14px 15px 15px 25px;
+			background-image: url('../images/icons/admin-icons/caret-right-blue.svg');
+			background-repeat: no-repeat;
+			background-size: 16px 16px;
+			background-position: 0 16px;
+			&:hover,&:focus{
+				background-image: url('../images/icons/admin-icons/caret-right-grey.svg');
+				background-color: $iceBlue;
+				@include transAll(.3s);
+			}
 		}
 		//hide one-off block types from non-admins
 		body:not(.role-administrator) &{
