--- a/web/themes/crane/scss/elements/_media.scss
+++ b/web/themes/crane/scss/elements/_media.scss
@@ -167,4 +167,17 @@ span.file{
 	}
 }
 
+/* CUSTOM SVG ICONS
+----------------------- */
+.crane-icon{
+	width: 50px;
+	height: 50px;
+	color: $link;
+	svg{
+		width: 50px;
+		height: 50px;
+		fill: currentColor;
+		stroke: currentColor;
+	}
+}
 
