--- a/web/themes/crane/scss/components/_list.scss
+++ b/web/themes/crane/scss/components/_list.scss
@@ -1,9 +1,5 @@
 /* ========================
-  LIST
-========================== */
-
-/* ========================
-  LIST
+  LISTS
 ========================== */
 
 .item-list ul{
