--- a/web/themes/citizen_patterns/components/_patterns/05-miscellaneous/_site-styles.scss
+++ b/web/themes/citizen_patterns/components/_patterns/05-miscellaneous/_site-styles.scss
@@ -455,3 +455,70 @@ body {
 		background-image: url($messageGoodIcon);
 	}
 }
+
+/* RESPONSIVE PREVIEW
+------------------------- */
+#responsive-preview-toolbar-tab .responsive-preview-trigger.active{
+	background: $green;
+}
+#responsive-preview-toolbar-tab .responsive-preview-trigger.active:hover{
+	background: $midGrey;
+}
+
+#responsive-preview-modal-background{
+	background: $transGrey;
+}
+#responsive-preview-frame-container{
+	border-radius: 5px;
+}
+.responsive-preview-device-label-text{
+	position: relative;
+	top: -2px;
+	color: $offWhite;
+}
+.responsive-preview-device-label-text:after{
+	content: none !important;
+}
+.responsive-preview-device-label-text span{
+	display: none;
+}
+.responsive-preview-control.responsive-preview-close{
+	right: -5px;
+}
+#responsive-preview-orientation:before{
+	height: 20px;
+	width: 20px;
+	background: url('../images/preview/orientation-white.svg') no-repeat;
+	background-size: 13px 13px;
+	background-position: center;
+	top: 6px;
+}
+#responsive-preview-close:before{
+	height: 20px;
+	width: 20px;
+	background: url('../images/preview/close-white.svg') no-repeat;
+	background-size: 13px 13px;
+	background-position: center;
+	top: 6px;
+}
+
+.responsive-preview-frame{
+	#block-citizen-patterns-local-tasks{
+		display: none !important;
+	}
+}
+
+/* MODERATION SIDEBAR
+------------------------ */
+.ui-dialog-off-canvas #drupal-off-canvas{ 
+	.js-form-type-checkbox{
+		@include customOptions;
+	}
+}
+.moderation-sidebar-actions{
+	a,input.button{
+		&:hover,&:focus{
+			text-decoration: underline !important;
+		}
+	}
+}
